injectable/tests/ui/missing_dependency.stderr
error: `UserService` depends on `Database`, which is not registered in the container
 --> tests/ui/missing_dependency.rs
  |
  | / container! {
  | |     UserService { deps: [Database], scope: "singleton" },
  | | }
  | |_^
  |
  = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find attribute `injectable` in this scope
 --> tests/ui/missing_dependency.rs
  |
  | #[injectable]
  |   ^^^^^^^^^^
  |
  = note: `injectable` is in scope, but it is a crate, not an attribute
